--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "scripts": {
     "start": "babel-node ./src/service/index.js",
+    "start:2": "HTTP_PORT=3001 P2P_PORT=5001 PEERS=ws:localhost:5000 yarn start",
     "nodemon": "nodemon --exec yarn start",
     "lint": "eslint index.js src",
     "test": "jest",
@@ -24,7 +25,8 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "crypto-js": "^4.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "ws": "^7.2.3"
   },
   "jest": {
     "silent": false,
