--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "crypto-js": "^4.0.0",
+    "ejs": "^3.1.2",
     "elliptic": "^6.5.2",
     "express": "^4.17.1",
+    "set-interval-async": "1.0.32",
     "uuid": "^7.0.3",
     "ws": "^7.2.3"
   },
