--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "lint": "eslint index.js src",
     "test": "jest",
     "test:watch": "jest --watchAll",
-    "miner": "babel-node miner.js"
+    "miner": "babel-node miner.js",
+    "forever": "forever start src/service/index.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -29,6 +30,7 @@
     "ejs": "^3.1.2",
     "elliptic": "^6.5.2",
     "express": "^4.17.1",
+    "forever": "^2.0.0",
     "set-interval-async": "1.0.32",
     "uuid": "^7.0.3",
     "ws": "^7.2.3"
