--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "license": "MIT",
   "private": false,
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
     "@babel/core": "^7.5.5",
     "@babel/node": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
+    "@babel/register": "^7.9.0",
     "eslint": "^6.3.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
@@ -22,7 +24,9 @@
     "test": "jest",
     "test:watch": "jest --watchAll",
     "miner": "babel-node miner.js",
-    "forever": "forever start src/service/index.js"
+    "clean": "rm -rf dist && mkdir dist",
+    "build": "yarn clean && babel src -s -d dist && cp -r src/service/views dist/service/views",
+    "start:prod": "yarn build && pm2 start ./dist/service/index.js --name blockchain"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -30,7 +34,6 @@
     "ejs": "^3.1.2",
     "elliptic": "^6.5.2",
     "express": "^4.17.1",
-    "forever": "^2.0.0",
     "set-interval-async": "1.0.32",
     "uuid": "^7.0.3",
     "ws": "^7.2.3"
