--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "miner": "babel-node miner.js",
     "clean": "rm -rf dist && mkdir dist",
     "build": "yarn clean && babel src -s -d dist && cp -r src/service/views dist/service/views",
-    "start:prod": "yarn build && pm2 start ./dist/service/index.js --name blockchain"
+    "start:prod": "yarn build && pm2 start ./dist/service/index.js --name blockchain --log activity.log"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
