--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "private": false,
+  "bin": "./dist/service/index.js",
+  "pkg": {
+    "scripts": ["./public/assets/**/*.js"],
+    "assets": ["./public/assets/**/*", "./dist/service/views/**/*"]
+  },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.5.5",
@@ -34,6 +39,7 @@
     "ejs": "^3.1.2",
     "elliptic": "^6.5.2",
     "express": "^4.17.1",
+    "pkg": "^4.4.8",
     "set-interval-async": "1.0.32",
     "uuid": "^7.0.3",
     "ws": "^7.2.3"
