--- a/env.json.example
+++ b/env.json.example
@@ -1,10 +1,9 @@
 {
 	"NAME":"Node 1",
 	"HTTP_PORT":3000,
-	"HTTPS_PORT":3443,
+	"HTTPS_PORT":3400,
 	"P2P_PORT":5000,
-	"PRIVKEY": "/PATH/privkey.pem",
-	"CERT": "/PATH.pem",
-	"CHAIN": "/PATH/chain.pem",
+	"PRIVKEY": "key.pem",
+	"CERT": "cert.pem"
 	"PEERS": []
 }
